--- a/zuul-server-test.yml
+++ b/zuul-server-test.yml
@@ -1,6 +1,6 @@
 zuul:
   routes:
-    demo-dept: /bbb/**
+    demo-dept: /ccc/**
 #  ignored-patterns:
 #    - /**/demo-dept/zuulTest
   sensitive-headers:
