--- a/zuul-server-test.yml
+++ b/zuul-server-test.yml
@@ -4,6 +4,9 @@ zuul:
 #  ignored-patterns:
 #    - /**/demo-dept/zuulTest
   sensitive-headers:
+  host:
+    connect-timeout-millis: 15000 #HTTP连接超时要比Hystrix的大
+    socket-timeout-millis: 60000   #socket超时
 
 
 spring:
