--- a/zuul-server-test.yml
+++ b/zuul-server-test.yml
@@ -7,6 +7,9 @@ zuul:
   host:
     connect-timeout-millis: 15000 #HTTP连接超时要比Hystrix的大
     socket-timeout-millis: 60000   #socket超时
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000 
 
 
 spring:
